# ru-u_test-case

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_04_06_1046-d33a209bb7fe_smoke_check.py  2024_04_06_1349-0eec3382b787_users_table.py  2024_04_06_1539-8f9112789f5c_users_table.py  2024_04_06_1721-c834768f6cf6_tokens_table.py  2024_04_07_1249-2ab6836227e8_create_palettes_and_colors_tables.py
api_v1/: __init__.py
api_v1/auth/: actions.py  crud.py  dependencies.py  utils.py  views.py
api_v1/colors/: color_fetcher.py  crud.py  dependencies.py  schemas.py  views.py
api_v1/palettes/: crud.py  dependencies.py  schemas.py  views.py
api_v1/tokens/: controllers.py  views.py
api_v1/users/: controllers.py  crud.py  responses.py  schemas.py  views.py
certs/: jwt-private.pem  jwt-public.pem
core/: config.py
core/models/: __init__.py  color.py  db_helper.py  palette.py  token.py  user.py
docker/: app.sh
secure/: __init__.py
